add match scout creation
